[package]
name = "marte-desktop-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "os-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
base64 = "0.21.0"
tokio-tungstenite = "0.20.0"
rsautogui = "0.2.2"
websockets = "0.3.0"
image = "0.25.5"
log = "0.4.25"
rustautogui = "0.3.2"



[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
